adicionando actions e values

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <h2 id="score">0</h2>
             </div>
             <div class="menu-lives">
-                <h2 style="color:red ;">Lifes</h2>
-                <h2>x4</h2>
+                <img src="src/img/player.png" alt="lifes" id="imgplayer" height="60px">
+                <h2>4x</h2>
             </div>
         </div>
            <div class="panel">
